--- a/assets/css/dashforge.css
+++ b/assets/css/dashforge.css
@@ -2722,10 +2722,10 @@ input[type="button"].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 4'%3e%3cpath stroke='%23fff' d='M0 2h4'/%3e%3c/svg%3e"); }
 
 .custom-checkbox .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(1, 104, 250, 0.5); }
+  background-color: #AF0606; }
 
 .custom-checkbox .custom-control-input:disabled:indeterminate ~ .custom-control-label::before {
-  background-color: rgba(1, 104, 250, 0.5); }
+  background-color:#AF0606; }
 
 .custom-radio .custom-control-label::before {
   border-radius: 50%; }
@@ -7452,7 +7452,7 @@ strong {
 .custom-checkbox .custom-control-input:disabled:checked ~ .custom-control-label::before,
 .custom-radio .custom-control-input:disabled:checked ~ .custom-control-label::before,
 .custom-switch .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  border-color: rgba(1, 104, 250, 0.2); }
+  border-color: #AF0606; }
 
 .custom-checkbox .custom-control-label::before, .custom-checkbox .custom-control-label::after,
 .custom-radio .custom-control-label::before,
