--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -105,9 +105,10 @@
 .shadow-dash{
   box-shadow: 0px 5px 20px #0000000A;
 }
-.content-body{
+.content-body,.modal-side{
   background-color: #F0F1FA!important;
 }
+
 .nav-aside .nav-item.active .nav-link::before{
   background-color: #f0f1fa54!important;
   opacity: 1;
@@ -215,7 +216,7 @@
       border-bottom: 1px solid #B11E1E;
       color: #1E2533;
     }
-    .card-check .custom-control-input:checked ~ .custom-control-label::before{
+    .card-check .custom-control-input:checked ~ .form-check-label::before{
       border-left: 3px solid #B11E1E;
       border-right: 1px solid #B11E1E;
       border-top: 1px solid #B11E1E;
@@ -234,8 +235,8 @@
       border-radius: 50%;
       display: inline-block;
     }
-    thead{
-      background-color: #EE1C241A;
+    thead, .bg-pink{
+      background-color: #EE1C241A!important;
     }
     #secondImg{
       display: none;
@@ -275,3 +276,57 @@
   }
   
 }
+
+.search-form button{
+  border: none;
+}
+
+.modal.right .modal-dialog {
+  position: fixed;
+  margin: auto;
+  width: 370px;
+  top: 50px;
+  height: 93%;
+  -webkit-transform: translate3d(0%, 0, 0);
+      -ms-transform: translate3d(0%, 0, 0);
+       -o-transform: translate3d(0%, 0, 0);
+          transform: translate3d(0%, 0, 0);
+}
+
+.large-right .modal-dialog {
+  width: 370px!important;
+  top: 60px;
+}
+
+.modal.right .modal-content {
+  height: 100%;
+  overflow-y: auto;
+}
+
+
+.modal.right.fade .modal-dialog {
+  right: 0px;
+  -webkit-transition: opacity 0.3s linear, right 0.3s ease-out;
+     -moz-transition: opacity 0.3s linear, right 0.3s ease-out;
+       -o-transition: opacity 0.3s linear, right 0.3s ease-out;
+          transition: opacity 0.3s linear, right 0.3s ease-out;
+}
+.fa-instagram{
+color: #DD2A7B;
+}
+.fa-facebook-square{
+color: #4267B2;
+}
+.fa-twitter{
+color: #1DA1F2;
+}
+.fa-snapchat{
+color: #FFFC00;
+}
+.fa-bullhorn{
+  color: red;
+}
+.social-media{
+  font-size: 22px!important;
+}
+
