--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -106,7 +106,7 @@
   box-shadow: 0px 5px 20px #0000000A;
 }
 .content-body,.modal-side{
-  background-color: #F0F1FA!important;
+  background-color: #F0F1FA;
 }
 
 .nav-aside .nav-item.active .nav-link::before{
