--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap');
+
+.tx-com{
+  font-family: 'Comfortaa', cursive!important;
+}
+a{
+  font-family: 'Comfortaa', cursive;
+}
 .header-part{
-  background-color: #EE1C241A;
+  background-color: #FF1F0033;
 }
 .tx-blac{
   color: #464646;
@@ -41,7 +49,7 @@
   animation-iteration-count: infinite;
 }
 .footer{
-  background-color: #1C1C1D;
+  background-color: #170C0C;
 }
 .footer-link li a{
   color: #fff!important;
@@ -245,6 +253,35 @@
       position: absolute;
       z-index: 999;
     }
+    .shadoww{
+      box-shadow: 0px 5px 15px #0000000D;
+    }
+
+.bg-reddish{
+  background-color: #FF1F001D;
+}
+
+.img-neg{
+  margin-top: -70px;
+}
+.img-negg{
+  margin-top: -30px;
+}
+
+.mar-left{
+  /* margin-left: 21rem; */
+  position: absolute;
+  right: 0;
+}
+.pos-rel{
+  position: relative;
+}
+
+
+
+
+
+
 /* X-Small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) { 
   .started-btn{
@@ -265,6 +302,13 @@
   .welcome-div{
     transform: translateY(0%);
   }
+  .img-neg{
+    margin-top: 0px;
+  }
+  .img-negg{
+    margin-top: 0px;
+  }
+  
 }
 
 /* extra large screen  */
