--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -470,3 +470,9 @@ table.dataTable thead th{
 .round-5{
   border-radius: 10px;
 }
+.tx-amt{
+  font-weight: 700!important;
+  color: #FF0000 !important;
+  padding: 0.6rem 0.5rem!important;
+  text-align: left;
+}
