--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -476,3 +476,19 @@ table.dataTable thead th{
   padding: 0.6rem 0.5rem!important;
   text-align: left;
 }
+.list-group-item.prima.active{
+  background-color: #FF6600!important;
+}
+.list-group-item.prima{
+  border: none!important;
+  background-color: transparent;
+  padding: 0.75rem 1.25rem;
+
+}
+.bg-tan{
+  background-color: #F9EAE3;
+}
+.bd-role{
+  border: 1px solid #59058D;
+  border-radius: 4px;
+}
