--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -147,6 +147,27 @@ a{
 .bg-gray{
   background-color: #F0F1FA;
 }
+.bd-deep-purple{
+  border:2px solid #4D00DE;
+}
+.bd-orange{
+  border:2px solid #E77140;
+}
+.bd-green{
+  border:2px solid #00DEA5;
+}
+.bd-purple{
+  border:2px solid #995BF5;
+}
+.bd-orang{
+  border-left:3px solid #E77140;
+}
+.bd-gree{
+  border-left:3px solid #00DEA5;
+}
+.bd-purpl{
+  border-left:3px solid #995BF5;
+}
 .content-search{
   max-width: 60%!important;
 }
@@ -491,4 +512,7 @@ table.dataTable thead th{
 .bd-role{
   border: 1px solid #59058D;
   border-radius: 4px;
+}
+.tx-red{
+  color: #FF0000;
 }
